# fusion

./: LICENSE  README.md
旋转和平移/: CMakeLists.txt  demo.py  main.cpp
点云投影过程/: demo.py  label.json
融合参数计算过程/: demo.py  readme.txt
辅助演示使用/: main_bak.cpp
